# code-repository

./: .gitignore  README.md  linkedList.c  test.c
src/: test.c
src/C++/utils/glfw/Luke/: CMakeLists.txt  diagram.drawio  structure.md  structure.txt
src/C++/utils/glfw/Luke/assets/shaders/: basic.frag  basic.vert
src/C++/utils/glfw/Luke/src/: main.cpp
src/C++/utils/glfw/Luke/src/core/: Application.cpp  Application.hpp  Input.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
src/C++/utils/glfw/Luke/src/ecs/: Component.hpp  Entity.hpp  Registry.cpp  Registry.hpp
src/C++/utils/glfw/Luke/src/ecs/components/: CameraComponent.hpp  MeshRenderer.hpp  Transform.hpp
src/C++/utils/glfw/Luke/src/ecs/systems/: InputSystem.hpp  MovementSystem.hpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/C++/utils/glfw/Luke/src/rendering/: IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/C++/utils/glfw/Luke/src/resources/: ResourceManager.cpp  ResourceManager.hpp
src/C++/utils/glfw/Luke/src/scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/C++/utils/glfw/Luke/src/scene/scenes/: DebugLevel.cpp  DebugLevel.hpp
src/C++/utils/glfw/geometric-forms/: CMakeLists.txt
src/C++/utils/glfw/geometric-forms/src/: main.cpp
src/C++/utils/glfw/geometric-forms/src/gameObject/: GameObject.hpp
src/C++/utils/glfw/geometric-forms/src/graphics/: Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/C++/utils/glfw/geometric-forms/src/math/: Transform.cpp  Transform.hpp
src/C++/utils/glfw/modern-triangle/: CMakeLists.txt  README.md
src/C++/utils/glfw/modern-triangle/src/: main.cpp
src/C++/utils/glfw/modern-triangle/src/graphics/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/C++/utils/glfw/modern-triangle/src/math/: Transform.hpp
src/C++/utils/glfw/modern-triangle/src/objects/: Triangle.cpp  Triangle.hpp
src/List/: linkedList.c  test.c
src/doublyList/: test.c  (+1 more)
(+294 files in other folders)
